# magic_docs

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/src/: arch.tf  aws_architecture.py  c1.py  models.py
magic_docs/models/: predictions.py
magic_docs/self-driving-experience/: package-lock.json  package.json
magic_docs/self-driving-experience/public/: index.html
magic_docs/self-driving-experience/src/: App.js
magic_docs/self-driving-experience/src/components/: Showreel.js  TeslaTitle.js  TeslaTitleText.js
magic_docs/self-driving-experience/src/stories/: Showreel.stories.jsx  TeslaTitle.stories.jsx  TeslaTitleText.stories.jsx
magic_docs/self-driving-experience/src/style/: App.css  index.css
magic_docs/services/: main.py
